[package]
name = "nrf-probe"
description = "Utility for discovering and capturing Nordic Semiconductor proprietary protocol radio packets emitted by Nordic Semiconductor nRF2401, nRF24L01+, nRF52840 and compatible transceivers"
authors = ["Daniel Würsch"]
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
bit-vec = "0.8.0"
crc = "3.2.1"
ctrlc = "3.4.5"
hex = "0.4.3"
itertools = "0.13.0"
rustradio = { version = "0.6.1", features = ["soapysdr", "fast-math"] }
structopt = "0.3.26"
